--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="106230_add_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\106230_add_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="close_111152" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\close_111152.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="106230_add_icon (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\106230_add_icon (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -130,7 +133,7 @@
   <data name="close_circle_remove_delete_icon_149506 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\close_circle_remove_delete_icon_149506 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="close_111152" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\close_111152.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="settings-3110" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\settings-3110.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
